Add file managing

--- a/frontend/src/assets/styles/UI/_btn.scss
+++ b/frontend/src/assets/styles/UI/_btn.scss
@@ -34,4 +34,10 @@
   &_inline{
     display: inline-block;
   }
+
+  &.sm {
+    font-size: 12px;
+    padding: 5px 12px;
+    margin-right: 5px
+  }
 }
